<resources>
    <string name="app_name">Task022</string>
    <string name="register">Register</string>
    <string name="full_name">Full name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="change_language">Change Language</string>
    <string name="terms_conditions">Terms and Conditions </string>
    <string name="terms_conditions_title">By clicking register you agree to </string>
    <string name="code">Country code</string>
    <string name="terms_url">https://termsfeed.com/blog/sample-terms-and-conditions-template/</string>
</resources>
