<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ge_dinar_one_medium"
        android:gravity="center"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="@color/txt_register"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/top_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register">

        <EditText
            android:id="@+id/et_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/full_name"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_bg"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_full_name" />

        <Spinner
            android:id="@+id/spinner_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_bg"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/code"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/spinner_code"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_bg"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/email"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_code" />

        <Spinner
            android:id="@+id/spinner_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/spinner_background"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <Spinner
            android:id="@+id/spinner_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/spinner_background"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_country" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/tv_terms_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/ge_dinar_one_medium"
        android:text="@string/terms_conditions_title"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/tv_change_lang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_container" />

    <TextView
        android:id="@+id/tv_terms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/terms_conditions"
        android:textColor="@color/txt_register"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/tv_change_lang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_terms_title"
        app:layout_constraintTop_toBottomOf="@+id/top_container" />

    <TextView
        android:id="@+id/tv_change_lang"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/txt_register"
        android:fontFamily="@font/ge_dinar_one_medium"
        android:gravity="center"
        android:paddingBottom="17dp"
        android:paddingTop="17dp"
        android:text="@string/change_language"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>